<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>t870_cmake</name>
    <version>0.0.0</version>
    <description>Henes T870 ROS2 package cmake macro</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>ament_cmake     </buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>ament_lint_auto </buildtool_depend>

    <!-- Dependencies -->
    <build_export_depend>ros_environment</build_export_depend>

    <!-- Test dependencies -->
    <test_depend>ament_lint_auto     </test_depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>