<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>t870_msgs</name>
    <version>0.0.0</version>
    <description>Henes T870 ROS2 message interfaces</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>std_msgs                 </depend>
    <depend>builtin_interfaces       </depend>
    <depend>rosidl_default_generators</depend>

    <!-- Designates providing ROSIDL message/service interfaces -->
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>