<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>t870_rqt_plugin</name>
    <version>0.0.0</version>
    <description>Henes T870 ROS2 RQT GUI package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author email="mgkilprg@gmail.com">Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>t870_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclcpp      </depend>
    <depend>t870_msgs   </depend>
    <depend>t870_util   </depend>
    <depend>rqt_gui     </depend>
    <depend>rqt_gui_cpp </depend>
    <depend>qt_gui_cpp  </depend>
    <depend>qtbase5-dev </depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>

</package>